--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <meta http-equiv="Refresh" content="0; url='https://hetrixtools.com/r/2a7e37042e0cca1166afa9e8235f9cda/'" />
- <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script><script src="https://kit.fontawesome.com/1403e8bc20.js" crossorigin="anonymous"></script>
+<script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
